# devstream

./: .dockerignore  .env.devstream  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CACHE_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_OLD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FASE_5.4_ROOT_CAUSE_FIX.md  IMPLEMENTATION_SUMMARY_ollama_cache.md  INSTALLATION.md  Makefile  PHASE_3_COMPLETION_SUMMARY.md  PHASE_5_TEST_COMPLETION_REPORT.md  PHASE_C_VALIDATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  START_DEVSTREAM.md  TEST_RESULTS_PHASE_C.md  claude-dev  context7-wrapper.sh  install.sh  pyproject.toml  pytest.ini  start-devstream.sh  test_hook_verification.py  test_memory_basic.py  test_memory_integration.py  test_memory_simple.py  test_simple_ext.js  test_system_final.py
.claude/: settings.json
.claude/agents/: README.md
.claude/agents/domain/: python-specialist.md  typescript-specialist.md
.claude/agents/orchestrator/: tech-lead.md
.claude/agents/qa/: code-reviewer.md
.claude/hooks/devstream/: DEPLOYMENT_GUIDE.md
.claude/state/: RECOVERY_QUICK_START.md  current_task.json  session_checkpoint_pre_restart.md
.claude/tasks/: agent-auto-delegation.md
.config/: context7.json
config/: development.yml  testing.yml
deployment/: fabfile.py
deployment/docker/: Dockerfile  docker-compose.prod.yml
deployment/nginx/: nginx.conf
deployment/scripts/: deploy.sh
docs/: PHASE_D_DOCUMENTATION_SUMMARY.md  README.md  phase-3-completion-report.md  production-architecture.md
docs/api/: database-schema.md  hooks-api.md  json_schemas.json  mcp-tools.md
docs/architecture/: agent-auto-delegation.md  architecture.md  auto-save-service.md  checkpoint-system.md  claude-md-optimization-validation.md  database_schema.sql  integration-test-architecture.md  memory_and_context_system.md  protocol-enforcement.md  session-summary-atomic-write.md
docs/deployment/: DEPLOYMENT_SUMMARY.md  PRODUCTION_VALIDATION_REPORT.md  automatic-features-validation-report.md  hook-execution-fix-report.md  hook-fix-command-format.md  hook-restart-requirement.md  hook-system-restart-guide.md  hook-system-v2-analysis-report.md  hook-system-v2-deployment.md  hook-system-v2-final-validation.md  phase-2-testing-completion-report.md  phase3-real-world-testing-guide.md  phase3-validation-checklist.md  post-restart-validation-issues.md  startup-script-v2.md
docs/developer-guide/: README.md  architecture.md  hook-system.md  mcp-server.md  release-process.md  setup-development.md  testing.md
docs/development/: FASE_3_PROCESS_INTEGRATION_SUMMARY.md  b2-session-summary-behavioral-refinement.md  dashboard_task_plan.md  devstream-completion-plan.md  hook-system-v2-phase-a-complete.md  hook-system.md  methodology-example.md  ollama-embedding-cache.md  phase-b-c-validation-report.md  rate-limiter-implementation.md  roadmap.md  security-path-validation.md  svilupo_debug_deployment_1.md  sviluppo_mcp_devstream_1.md
docs/guides/: CLAUDE.quick-reference.md  devstream-automatic-features-guide.md  hook-system-validation-guide.md  multi-provider-llm-setup.md
docs/idee_fondanti/: idee_fondanti_piano_fondazione.md
docs/implementation/: context-injection-optimization-summary.md  phase-5-completion-report.md
docs/quality-assurance/: context-injection-checkup-report.md
docs/releases/: v0.1.0-beta-fixes.md
docs/tutorials/: README.md  custom-agent.md  existing-project.md  first-project.md  multi-stack-workflow.md
docs/user-guide/: agents-guide.md  configuration.md  core-concepts.md  faq.md  getting-started.md  session-management.md  troubleshooting.md
examples/: example_router_config.py  rate_limiter_usage.py
mcp-devstream-server/: COMPLETE_IMPLEMENTATION.md  DEPLOYMENT.md  HYBRID_SEARCH.md  MONITORING.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_DEPLOYMENT.md  README.md  check_extension_support.js  check_extension_support2.js  check_schema.js  check_versions.js  cleanup_and_test.js  comprehensive_vec0_test.js  create_fts5_table.js  create_fts5_trigger.js  create_sync_triggers.js  create_vec0_table.sql  debug_rowid.js  direct_test.js  drop_and_recreate.js  migrate_existing_data.js  package.json  recreate_nullable.js  smoke-test.js  start-production.js  test-database.js  test_better_sqlite.js  test_column_order.js  test_devstream_db.js  test_direct_insert.js  test_extension.js  test_fts5_simple.js  test_fts5_with_vec.js  test_hybrid_search.js  test_json_insert.js  test_metrics.js  test_no_rowid.js  test_param_binding.js  test_sql_load.js  test_sqlite_vec_official.js  (+4 more)
mcp-devstream-server/src/: database.ts  index.ts  ollama-client.ts
mcp-devstream-server/src/monitoring/: error-tracking.ts  metrics-server.ts  metrics.ts  quality-metrics.ts
mcp-devstream-server/src/tools/: memory.ts  (+3 more)
schema/: README.md  validate_schema.py
scripts/: post-install.py  setup-db.py  start-devstream.sh  synthetic-proxy.js
scripts/providers/: README.md  synthetic.sh  z.ai.sh
sqlite-extensions/: vec0-simple.dylib  vec0.dylib
tests/: TEST_SUITE_SUMMARY.md  conftest.py  test_ai_planning_comprehensive.py  test_rate_limiter_performance.py  test_setup_db.py
tests/benchmarks/: benchmark_ollama_cache.py
tests/integration/: HOOK_OPTIMIZATION_TEST_RESULTS.md  conftest.py  test_active_session_tracking_e2e.py  test_all_fixes_integration.py  test_clear_devstream_command.py  test_cross_session_summary_workflow.py  test_database_integration.py  test_delegation_workflow.py  test_e2e_workflow.py  test_end_to_end_workflows.py  test_enhanced_multi_tool_capture.py  test_error_boundaries.py  test_hook_optimization.py  test_hook_optimization_simplified.py  test_memory_database_integration.py  test_memory_database_simple.py  test_session_hooks_integration.py  test_tasks_memory_integration.py
tests/standalone/: hook_system_validator.py  test_memory_standalone.py  test_ollama_standalone.py
tests/stress/: test_crash_prevention.py
tests/unit/: test_active_session_tracking.py  test_atomic_file_writer.py  test_debouncer.py  test_ollama_cache.py  test_path_validator.py  test_pre_compact_hook.py  test_rate_limiter.py
(+75 files in other folders)
